--- a/css/index.css
+++ b/css/index.css
@@ -284,3 +284,27 @@ h1, h2, h3 {
     font-size: calc(1.5rem + 1vw);
 }
 
+
+  /* Định dạng nút */
+  .scroll-to-top {
+    position: fixed;
+    bottom: 38px;
+    right: 20px;
+    display: none; /* Ẩn nút ban đầu */
+    background-color: #ccc;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+.scroll-to-top:hover {
+    background-color: #0056b3;
+}
+
+
